--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <version>23.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
